// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders states correctly renders checked disabled state 1`] = `
<DocumentFragment>
  <div
    class="switchComponent"
  >
    <div
      class="switchTextWrapper"
    >
      <button
        aria-checked="true"
        class="mia-platform-switch mia-platform-switch-checked mia-platform-switch-disabled"
        disabled=""
        role="switch"
        type="button"
      >
        <div
          class="mia-platform-switch-handle"
        />
        <span
          class="mia-platform-switch-inner"
        >
          <span
            class="mia-platform-switch-inner-checked"
          />
          <span
            class="mia-platform-switch-inner-unchecked"
          />
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch renders states correctly renders checked loading state 1`] = `
<DocumentFragment>
  <div
    class="switchComponent"
  >
    <div
      class="switchTextWrapper"
    >
      <button
        aria-checked="true"
        class="mia-platform-switch mia-platform-switch-loading mia-platform-switch-checked mia-platform-switch-disabled"
        disabled=""
        role="switch"
        type="button"
      >
        <div
          class="mia-platform-switch-handle"
        >
          <span
            aria-label="loading"
            class="anticon anticon-loading anticon-spin mia-platform-switch-loading-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="loading"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
              />
            </svg>
          </span>
        </div>
        <span
          class="mia-platform-switch-inner"
        >
          <span
            class="mia-platform-switch-inner-checked"
          />
          <span
            class="mia-platform-switch-inner-unchecked"
          />
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Switch renders states correctly renders default loading state 1`] = `
<DocumentFragment>
  <div
    class="switchComponent"
  >
    <div
      class="switchTextWrapper"
    >
      <button
        aria-checked="false"
        class="mia-platform-switch mia-platform-switch-loading mia-platform-switch-disabled"
        disabled=""
        role="switch"
        type="button"
      >
        <div
          class="mia-platform-switch-handle"
        >
          <span
            aria-label="loading"
            class="anticon anticon-loading anticon-spin mia-platform-switch-loading-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="loading"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
              />
            </svg>
          </span>
        </div>
        <span
          class="mia-platform-switch-inner"
        >
          <span
            class="mia-platform-switch-inner-checked"
          />
          <span
            class="mia-platform-switch-inner-unchecked"
          />
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
